Fix z-index of all img in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ img {
     width: 100%;
     background: #FEC63E; 
     padding: 15px 0;
+    z-index: 10;
 }
 
 .header_menu {
